--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,5 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Short Url Grenerator</title>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <h1>This is Home page</h1>
+    </div>
+  </body>
 </html>
