--- a/public/style/style.css
+++ b/public/style/style.css
@@ -1,264 +1,264 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: Arial, sans-serif;
-  }
-  a{
-    text-decoration: none;
-    display: inline-block;
-  }
-  body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: #f4f4f4;
-    color: #333;
-    min-height: 100vh;
-    justify-content: space-between;
-  }
-  
-  nav {
-    width: 100%;
-    background-color: #333;
-    padding: 1rem 0;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  nav ul {
-    display: flex;
-    justify-content: center;
-    list-style: none;
-  }
-  
-  nav ul li {
-    margin: 0 15px;
-  }
-  
-  nav ul li a {
-    color: white;
-    font-size: 1.2rem;
-    transition: color 0.3s;
-  }
-  
-  nav ul li a:hover {
-    color: #ffa500;
-  }
-  
-  .container {
-    text-align: center;
-    margin-top: 50px;
-    padding: 20px;
-    width: 100%;
-    max-width: 600px;
-    background-color: white;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-    border-radius: 8px;
-  }
-  
-  .container h1 {
-    margin-bottom: 20px;
-    font-size: 2rem;
-  }
-  
-  .url-input {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-    margin-bottom: 20px;
-  }
-  
-  .url-input input {
-    width: 70%;
-    border: none;
-    outline: none;
-    background: none;
-    font-size: 18px;
-    color: #555;
-    padding: 15px 5px 10px 20px;
-    box-shadow: inset 8px 8px 8px #cbced1,
-                inset -8px -8px 8px #ffffff;
-    border-radius: 25px;
-  }
-  
-  button {
-    color: #090909;
-    padding: 0.7em 1.7em;
-    font-size: 18px;
-    border-radius: 0.5em;
-    background: #e8e8e8;
-    cursor: pointer;
-    border: 1px solid #e8e8e8;
-    transition: all 0.3s;
-    box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
-  }
-  
-  button:active {
-    color: #666;
-    box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
-  }
-  
-  .short-link {
-    margin: 40px 0;
-    font-size: 1.2rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-  }
-  .short-link p{
-    font-weight: 600;
-  }
-  
-  .short-link .link {
-    font-size: 18px;
-    border-radius: 0.5em;
-    cursor: pointer;
-    border: 1px solid #e8e8e8;
-    transition: all 0.3s;
-    box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
-   }
-   
-   .short-link a {
-    padding: 15px;
-     color: #0073e6;
-     transition: color 0.3s;
-    }
-    .short-link .copy{
-      padding: 15px;
-      cursor: pointer;
-      background-color: white;
-      border: none;
-      border-top-right-radius: 15px;
-      border-bottom-right-radius: 15px;
-    }
-  footer {
-    margin: 20px 0;
-    font-size: 0.9rem;
-  }
-  /* ==== */
-  
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, sans-serif;
+}
+a {
+  text-decoration: none;
+  display: inline-block;
+}
+body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #f4f4f4;
+  color: #333;
+  min-height: 100vh;
+  justify-content: space-between;
+}
+
+nav {
+  width: 100%;
+  background-color: #333;
+  padding: 1rem 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+nav ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+}
+
+nav ul li {
+  margin: 0 15px;
+}
+
+nav ul li a {
+  color: white;
+  font-size: 1.2rem;
+  transition: color 0.3s;
+}
+
+nav ul li a:hover {
+  color: #ffa500;
+}
+
+.container {
+  text-align: center;
+  margin-top: 50px;
+  padding: 20px;
+  width: 100%;
+  max-width: 600px;
+  background-color: white;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.container h1 {
+  margin-bottom: 20px;
+  font-size: 2rem;
+}
+
+.url-input {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin-bottom: 20px;
+}
+
+.url-input input {
+  width: 70%;
+  border: none;
+  outline: none;
+  background: none;
+  font-size: 18px;
+  color: #555;
+  padding: 15px 5px 10px 20px;
+  box-shadow: inset 8px 8px 8px #cbced1, inset -8px -8px 8px #ffffff;
+  border-radius: 25px;
+}
+
+button {
+  color: #090909;
+  padding: 0.7em 1.7em;
+  font-size: 18px;
+  border-radius: 0.5em;
+  background: #e8e8e8;
+  cursor: pointer;
+  border: 1px solid #e8e8e8;
+  transition: all 0.3s;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+}
+
+button:active {
+  color: #666;
+  box-shadow: inset 4px 4px 12px #c5c5c5, inset -4px -4px 12px #ffffff;
+}
+
+.short-link {
+  margin: 40px 0;
+  font-size: 1.2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.short-link p {
+  font-weight: 600;
+}
+
+.short-link .link {
+  font-size: 18px;
+  border-radius: 0.5em;
+  cursor: pointer;
+  border: 1px solid #e8e8e8;
+  transition: all 0.3s;
+  box-shadow: 6px 6px 12px #c5c5c5, -6px -6px 12px #ffffff;
+}
+
+.short-link a {
+  padding: 15px;
+  color: #0073e6;
+  transition: color 0.3s;
+}
+.short-link .copy {
+  padding: 15px;
+  cursor: pointer;
+  background-color: white;
+  border: none;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+footer {
+  margin: 20px 0;
+  font-size: 0.9rem;
+}
+/* ==== */
+
+.reg-log {
+  width: 340px;
+  height: 400px;
+  background: #2c2c2c;
+  padding: 47px;
+  padding-bottom: 57px;
+  color: #fff;
+  border-radius: 17px;
+  padding-bottom: 50px;
+  font-size: 1.3em;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+}
+
+.reg-log input[type="text"],
+.reg-log input[type="password"] {
+  opacity: 1;
+  display: block;
+  border: none;
+  outline: none;
+  width: 100%;
+  padding: 13px 18px;
+  margin: 20px 0 0 0;
+  font-size: 0.8em;
+  border-radius: 100px;
+  background: #3c3c3c;
+  color: #fff;
+}
+
+.reg-log input:focus {
+  animation: bounce 1s;
+  -webkit-appearance: none;
+}
+
+.reg-log input[type="submit"],
+.reg-log input[type="button"],
+.reg-log .h1 {
+  border: 0;
+  outline: 0;
+  width: 100%;
+  padding: 13px;
+  margin: 40px 0 0 0;
+  border-radius: 500px;
+  font-weight: 600;
+  animation: bounce2 1.6s;
+}
+
+.reg-log .h1 {
+  padding: 0;
+  position: relative;
+  top: -35px;
+  display: block;
+  margin-bottom: -0px;
+  font-size: 1.3em;
+}
+
+.reg-log .btn {
+  background: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
+  color: #fff;
+  padding: 16px !important;
+}
+
+.reg-log .btn:hover {
+  background: linear-gradient(144deg, #1e1e1e, 20%, #1e1e1e 50%, #1e1e1e);
+  color: rgb(255, 255, 255);
+  padding: 16px !important;
+  cursor: pointer;
+  transition: all 0.4s ease;
+}
+
+.reg-log input[type="text"] {
+  animation: bounce 1s;
+  -webkit-appearance: none;
+}
+
+.reg-log input[type="password"] {
+  animation: bounce1 1.3s;
+}
+
+.reg-log .ui {
+  font-weight: bolder;
+  background: -webkit-linear-gradient(#b563ff, #535efc, #0ec8ee);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  border-bottom: 4px solid transparent;
+  border-image: linear-gradient(0.25turn, #535efc, #0ec8ee, #0ec8ee);
+  border-image-slice: 1;
+  display: inline;
+}
+
+@media only screen and (max-width: 600px) {
   .reg-log {
-    width: 340px;
-    height: 400px;
-    background: #2c2c2c;
-    padding: 47px;
-    padding-bottom: 57px;
-    color: #fff;
-    border-radius: 17px;
-    padding-bottom: 50px;
-    font-size: 1.3em;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    width: 70%;
+    padding: 3em;
   }
-  
-  .reg-log input[type="text"],
-  .reg-log input[type="password"] {
-    opacity: 1;
-    display: block;
-    border: none;
-    outline: none;
-    width: 100%;
-    padding: 13px 18px;
-    margin: 20px 0 0 0;
-    font-size: 0.8em;
-    border-radius: 100px;
-    background: #3c3c3c;
-    color: #fff;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-250px);
+    opacity: 0;
   }
-  
-  .reg-log input:focus {
-    animation: bounce 1s;
-    -webkit-appearance: none;
+}
+
+@keyframes bounce1 {
+  0% {
+    opacity: 0;
   }
-  
-  .reg-log input[type=submit],
-  .reg-log input[type=button],
-  .reg-log .h1 {
-    border: 0;
-    outline: 0;
-    width: 100%;
-    padding: 13px;
-    margin: 40px 0 0 0;
-    border-radius: 500px;
-    font-weight: 600;
-    animation: bounce2 1.6s;
+
+  40% {
+    transform: translateY(-100px);
+    opacity: 0;
   }
-  
-  .reg-log .h1 {
-    padding: 0;
-    position: relative;
-    top: -35px;
-    display: block;
-    margin-bottom: -0px;
-    font-size: 1.3em;
+}
+
+@keyframes bounce2 {
+  0% {
+    opacity: 0;
   }
-  
-  .reg-log .btn {
-    background: linear-gradient(144deg, #af40ff, #5b42f3 50%, #00ddeb);
-    color: #fff;
-    padding: 16px !important;
+
+  70% {
+    transform: translateY(-20px);
+    opacity: 0;
   }
-  
-  .reg-log .btn:hover {
-    background: linear-gradient(144deg, #1e1e1e , 20%,#1e1e1e 50%,#1e1e1e );
-    color: rgb(255, 255, 255);
-    padding: 16px !important;
-    cursor: pointer;
-    transition: all 0.4s ease;
-  }
-  
-  .reg-log input[type=text] {
-    animation: bounce 1s;
-    -webkit-appearance: none;
-  }
-  
-  .reg-log input[type=password] {
-    animation: bounce1 1.3s;
-  }
-  
-  .reg-log .ui {
-    font-weight: bolder;
-    background: -webkit-linear-gradient(#B563FF, #535EFC, #0EC8EE);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    border-bottom: 4px solid transparent;
-    border-image: linear-gradient(0.25turn, #535EFC, #0EC8EE, #0EC8EE);
-    border-image-slice: 1;
-    display: inline;
-  }
-  
-  @media only screen and (max-width: 600px) {
-    .reg-log {
-      width: 70%;
-      padding: 3em;
-    }
-  }
-  
-  @keyframes bounce {
-    0% {
-      transform: translateY(-250px);
-      opacity: 0;
-    }
-  }
-  
-  @keyframes bounce1 {
-    0% {
-      opacity: 0;
-    }
-  
-    40% {
-      transform: translateY(-100px);
-      opacity: 0;
-    }
-  }
-  
-  @keyframes bounce2 {
-    0% {
-      opacity: 0;
-    }
-  
-    70% {
-      transform: translateY(-20px);
-      opacity: 0;
-    }
-  }
+}
