--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,11 @@
 
     <div class="container">
       <h1>Short URL Maker</h1>
-      <form>
+      <form
+        class="url-input"
+        action="http://localhost:3000/api/v1/generate/shortUrl"
+        method="post"
+      >
         <input
           class="long-url"
           type="text"
@@ -27,27 +31,32 @@
         />
         <button type="submit">Generate</button>
       </form>
-
+      <% if (locals.error) { %>
+      <p class="error"><%= error %></p>
+      <% } %> <% if(locals.shortUrl){ %>
       <div class="short-link">
         <p>Your Short Link:</p>
         <div class="link">
-          <a href="" target="_blank"> </a>
-          <button>Copy</button>
+          <a href="<%= locals.shortUrl %>" target="_blank">
+            <%= locals.shortUrl %>
+          </a>
+          <button class="copy" onclick="copyShortLick()">Copy</button>
         </div>
       </div>
-      <button>Generate New</button>
+      <button class="backtoHome" onclick="backtoHome()">Generate New</button>
+      <% } %>
     </div>
     <footer>&copy; 2025 Short URL Maker. All rights reserved.</footer>
 
-    <!-- <script>
-           function copyShortLick () {
-                const shortUrl = document.querySelector('.link a').href;
-                navigator.clipboard.writeText(shortUrl)
-            };
-       
-            function backtoHome(){
-                window.location.pathname = "/"                
-            }
-    </script> -->
+    <script>
+      function copyShortLick() {
+        const shortUrl = document.querySelector(".link a").href;
+        navigator.clipboard.writeText(shortUrl);
+      }
+
+      function backtoHome() {
+        window.location.pathname = "/";
+      }
+    </script>
   </body>
 </html>
