--- a/public/style/style.css
+++ b/public/style/style.css
@@ -132,6 +132,7 @@ button:active {
   border-bottom-right-radius: 15px;
 }
 footer {
+  border-top: 2px #0ec8ee;
   margin: 20px 0;
   font-size: 0.9rem;
 }
